# bugbunnies

./: .gitignore  config.example.yaml  setup.cfg
bugbunnies/: config.py  logging.py
bugbunnies/irc/: bot.py
bugbunnies/modules/: cookie.py  utilities.py
bugbunnies/mqtt/: handler.py  logger.py
scripts/: handler  irc
