[metadata]
name = bugbunnies
version = 0.0.1
description = Multiprotocol bot framework using mqtt.
long_description = file: README.md
url = https://github.com/mpaulon/bugbunnied
author = Michaël PAULON
author_email = michael@paulon.org
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
include_package_data = true
packages = find:
install_requires =
    paho-mqtt
    irc
    pyyaml
    colorlog
    ping3
scripts = 
    scripts/irc
    scripts/handler